--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "mongoose": "^3.9.7",
     "morgan": "~1.5.1",
     "node-restful": "^0.1.18",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5"
   }
