--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
@@ -14,7 +15,6 @@
     "jade": "~1.9.2",
     "mongoose": "^3.9.7",
     "morgan": "~1.5.1",
-    "node-restful": "^0.1.18",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
