--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.9.2",
     "mongoose": "^3.9.7",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "node-restful": "^0.1.18",
     "serve-favicon": "~2.2.0",
     "socket.io": "^1.3.5"
