--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.9.2",
     "mongoose": "^3.9.7",
     "morgan": "~1.5.1",
+    "multer": "^0.1.8",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.0",
